--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,1 +1,43 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <h1>Habeeb Krd</h1>
+    </header>
+    <nav>
+        <a href="#">One</a>
+        <a href="#">Tow</a>
+        <a href="#">Three</a>
+        <h2>Favorite Foods</h2>
+        <ul>
+            <li>Banana</li>
+            <li>Orange</li>
+            <li>Nutella</li>
+            <li>Barbeque</li>
+        </ul>
+    </nav>
+    <section>
+        <h2>Achievment</h2>
+        <label for="course">Progress in this course (100%)</label>
+        <progress id="course" value="100" max="100">100%</progress><br>
+        <label for="specialization">Progress in the Specialization capstone (20%)</label>
+        <progress id="specialization" value="20" max="100">20%</progress><br>
+        <label for="goals">Progress in life goals (40%)</label>
+        <progress id="goals" value="40" max="100">40%</progress>
+    </section>   
+    <section>
+        <h2>More About Me</h2>
+        <details>
+            <summary>My Childhood</summary>
+            <p>I grew up in a small Town In north west of Syria, the town has a river </p>
+        </details>
+        <p><img src="img/newlogo.png" alt="Photo is here">
+        This pge was created by Habeeb Krd &amp; Colleen van Lent. To learn more about web design, vist <a href="http://intro-webdesign.com/projectdescription.html">Intro to Web design</a>.</p>
+    </section>
+</body>
+</html>
