--- a/assignment/index.html
+++ b/assignment/index.html
@@ -37,7 +37,7 @@
             <p>I grew up in a small Town In north west of Syria, the town has a river </p>
         </details>
         <p><img src="img/newlogo.png" alt="Photo is here">
-        This pge was created by Habeeb Krd &amp; Colleen van Lent. To learn more about web design, vist <a href="http://intro-webdesign.com/projectdescription.html">Intro to Web design</a>.</p>
+        This page was created by Habeeb Krd &amp; Colleen van Lent. To learn more about web design, vist <a href="http://intro-webdesign.com/projectdescription.html">Intro to Web design</a>.</p>
     </section>
 </body>
 </html>
