--- a/assignment/index.html
+++ b/assignment/index.html
@@ -13,6 +13,7 @@
         <a href="#">One</a>
         <a href="#">Tow</a>
         <a href="#">Three</a>
+        <a href="https://habeebkrd.github.io/HTML5/assignment/" target="_blank">My Assignment on github</a>
         <h2>Favorite Foods</h2>
         <ul>
             <li>Banana</li>
@@ -34,10 +35,10 @@
         <h2>More About Me</h2>
         <details>
             <summary>My Childhood</summary>
-            <p>I grew up in a small Town In north west of Syria, the town has a river </p>
+            <p>I grew up in a small Town In north west of Syria, the town has a river .</p>
         </details>
-        <p><img src="img/newlogo.png" alt="Photo is here">
-        This page was created by Habeeb Krd &amp; Colleen van Lent. To learn more about web design, vist <a href="http://intro-webdesign.com/projectdescription.html">Intro to Web design</a>.</p>
+        <p> <a href="http://intro-webdesign.com/" target="_blank"> <img src="http://www.intro-webdesign.com/images/newlogo.png" alt="WD4E PHOTO"></a>
+        This page was created by Habeeb Krd &amp; Colleen van Lent. To learn more about web design, vist <a href="http://intro-webdesign.com/projectdescription.html" target="_blank">Intro to Web design</a>.</p>
     </section>
 </body>
 </html>
